switched to released ameba verison

--- a/pom.xml
+++ b/pom.xml
@@ -447,11 +447,11 @@
             </activation>
             <repositories>
                 <repository>
-                    <id>sonatype-nexus-snapshots</id>
-                    <name>Snapshot Repository</name>
-                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+                    <id>sonatype-nexus-staging</id>
+                    <name>Staging Repository</name>
+                    <url>https://oss.sonatype.org/content/groups/staging</url>
                     <releases>
-                        <enabled>false</enabled>
+                        <enabled>true</enabled>
                     </releases>
                     <snapshots>
                         <enabled>true</enabled>
@@ -518,7 +518,7 @@
         <!-- =================== -->
         <!-- Dependency versions -->
         <!-- =================== -->
-        <ameba-lib.version>1.7-SNAPSHOT</ameba-lib.version>
+        <ameba-lib.version>1.7</ameba-lib.version>
         <aspectj.version>1.8.9</aspectj.version> <!-- Keep in sync with boot -->
         <dozer.version>5.5.1</dozer.version>
         <el-impl.version>2.2</el-impl.version>
