--- a/pom.xml
+++ b/pom.xml
@@ -499,7 +499,7 @@
         <maven.min.version>3.0.4</maven.min.version>
         <debug.info>true</debug.info>
         <ci.buildNumber>MANUAL</ci.buildNumber>
-        <documentation.dir>${project.build.directory}</documentation.dir>
+        <documentation.dir>./target</documentation.dir>
         <documentation.snippet.dir>${documentation.dir}/generated-snippets</documentation.snippet.dir>
         <documentation.input.dir>${documentation.dir}/generated-docs</documentation.input.dir>
         <documentation.output.dir>${documentation.dir}/site/rest</documentation.output.dir>
