#119 minor changes to plugin config

--- a/org.openwms.tms/org.openwms.tms.transportation/pom.xml
+++ b/org.openwms.tms/org.openwms.tms.transportation/pom.xml
@@ -98,6 +98,13 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
+            <exclusions>
+                <exclusion>
+                    <!-- bites with spring-core -->
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
