--- a/org.openwms.common/org.openwms.common.comm.client/pom.xml
+++ b/org.openwms.common/org.openwms.common.comm.client/pom.xml
@@ -30,7 +30,7 @@
         <artifactId>org.openwms.common</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>org.openwms.common.comm</artifactId>
+    <artifactId>org.openwms.common.comm.client</artifactId>
     <name>${project.artifactId}</name>
     <properties>
         <moduleDir>../..</moduleDir>
@@ -39,18 +39,9 @@
     <dependencies>
         <!-- Spring Framework -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-hystrix</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-ip</artifactId>
