--- a/org.openwms.common/pom.xml
+++ b/org.openwms.common/pom.xml
@@ -91,6 +91,11 @@
             <!-- Project dependencies -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>org.openwms.common.comm</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.common.service</artifactId>
                 <version>${project.version}</version>
             </dependency>
