--- a/pom.xml
+++ b/pom.xml
@@ -497,12 +497,13 @@
         <maven.compile.targetLevel>${java.version}</maven.compile.targetLevel>
         <maven.compile.sourceLevel>${java.version}</maven.compile.sourceLevel>
         <maven.min.version>3.0.4</maven.min.version>
-        <debug.info>true</debug.info>
         <ci.buildNumber>MANUAL</ci.buildNumber>
+        <debug.info>true</debug.info>
         <documentation.dir>./target</documentation.dir>
         <documentation.snippet.dir>${documentation.dir}/generated-snippets</documentation.snippet.dir>
         <documentation.input.dir>${documentation.dir}/generated-docs</documentation.input.dir>
         <documentation.output.dir>${documentation.dir}/site/rest</documentation.output.dir>
+        <enforcer.skip>true</enforcer.skip>
         <github.global.server>github</github.global.server>
         <github.global.oauth2Token>${env.GHTOKEN}</github.global.oauth2Token>
         <snippetsDirectory>${documentation.snippet.dir}</snippetsDirectory>
