#125 added service registry, run 4 processes distributed

--- a/org.openwms.tms/org.openwms.tms.routing/src/main/resources/bootstrap.yml
+++ b/org.openwms.tms/org.openwms.tms.routing/src/main/resources/bootstrap.yml
@@ -1,18 +1,9 @@
-security:
-  user:
-    password: sa
-  basic:
-    enabled: false
-
 spring:
   application:
-    name: common-service
-
+    name: routing-service
+server:
+  port: ${PORT:8081}
 eureka:
   client:
     serviceUrl:
       defaultZone: ${vcap.services.eureka-service.credentials.uri:http://127.0.0.1:8761}/eureka/
-
-server:
-  port: 8082
-
