#125 worked on service distribution

--- a/org.openwms.common/org.openwms.common.service/pom.xml
+++ b/org.openwms.common/org.openwms.common.service/pom.xml
@@ -55,7 +55,12 @@
     </profiles>
 
     <build>
+        <finalName>openwms-common-services</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>aspectj-maven-plugin</artifactId>
