--- a/org.openwms.common/pom.xml
+++ b/org.openwms.common/pom.xml
@@ -29,6 +29,7 @@
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms</artifactId>
         <version>1.1.0-SNAPSHOT</version>
+        <relativePath />
     </parent>
     <artifactId>org.openwms.common</artifactId>
     <version>1.1.0-SNAPSHOT</version>
