#141 changed namespace of own configuration properties to owms.*, worked on driver documentation

--- a/org.openwms.common/org.openwms.common.comm/pom.xml
+++ b/org.openwms.common/org.openwms.common.comm/pom.xml
@@ -83,6 +83,15 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- Used for retry -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+        </dependency>
 
         <!--dependency>
             <groupId>org.springframework.integration</groupId>
