added procfile for tcpip-driver

--- a/org.openwms.common/org.openwms.common.comm/pom.xml
+++ b/org.openwms.common/org.openwms.common.comm/pom.xml
@@ -36,6 +36,10 @@
         <moduleDir>../..</moduleDir>
     </properties>
 
+    <build>
+        <finalName>tcpip-driver</finalName>
+    </build>
+
     <dependencies>
         <!-- Spring Framework -->
         <dependency>
