--- a/org.openwms.tms/org.openwms.tms.routing/pom.xml
+++ b/org.openwms.tms/org.openwms.tms.routing/pom.xml
@@ -29,6 +29,7 @@
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.tms</artifactId>
         <version>1.1.0-SNAPSHOT</version>
+        <relativePath />
     </parent>
     <artifactId>org.openwms.tms.routing</artifactId>
     <name>${project.artifactId}</name>
@@ -184,5 +185,16 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>sonatype-nexus-snapshots</id>
+            <name>Snapshot Repository</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
 </project>
