now running on Heroku. Has to add SB plugin to create executable jar

--- a/org.openwms.tms/org.openwms.tms.routing/src/main/resources/bootstrap.yml
+++ b/org.openwms.tms/org.openwms.tms.routing/src/main/resources/bootstrap.yml
@@ -26,7 +26,7 @@ server:
 
 encrypt:
   keyStore:
-    location: classpath:/server.jks
+    location: classpath:server.jks
     password: openwms
     alias: livekey
 # set encrypt.key-store.secret as command line parameter or in the cloud environment props!
