--- a/org.openwms.tms/org.openwms.tms.routing/pom.xml
+++ b/org.openwms.tms/org.openwms.tms.routing/pom.xml
@@ -45,6 +45,10 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>aspectj-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
