--- a/org.openwms.tms/org.openwms.tms.routing/src/main/resources/bootstrap.yml
+++ b/org.openwms.tms/org.openwms.tms.routing/src/main/resources/bootstrap.yml
@@ -26,7 +26,7 @@ server:
 
 encrypt:
   keyStore:
-    location: classpath:server.jks
+    location: classpath:/server.jks
     password: openwms
     alias: livekey
 # set encrypt.key-store.secret as command line parameter or in the cloud environment props!
@@ -45,3 +45,11 @@ eureka:
     healthCheckUrl: https://${eureka.instance.hostName}/health
     homePageUrl: https://${eureka.instance.hostName}/
     non-secure-port: ${PORT:8081}
+    metadata-map:
+      username: user
+      password: sa
+
+security:
+  user:
+    password: sa
+
