added two new services, corrected typo in DEV provile

--- a/org.openwms.common/org.openwms.common.comm/src/main/resources/bootstrap.yml
+++ b/org.openwms.common/org.openwms.common.comm/src/main/resources/bootstrap.yml
@@ -49,7 +49,7 @@ spring:
 
 owms:
   eureka:
-    url: :http://user:sa@localhost:8761
+    url: http://user:sa@localhost:8761
 eureka:
   instance:
     hostname: localhost
