--- a/org.openwms.common/org.openwms.common.service/src/main/resources/bootstrap.yml
+++ b/org.openwms.common/org.openwms.common.service/src/main/resources/bootstrap.yml
@@ -1,20 +1,53 @@
 spring:
+  main:
+    banner-mode: off
   application:
     name: common-service
-  main:
-    banner-mode: "off"
-
-security:
-  user:
-    password: sa
-  basic:
-    enabled: false
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: ${vcap.services.eureka-service.credentials.uri:http://127.0.0.1:8761}/eureka/
+  cloud:
+    config:
+      label: ${owms.tenant:master}
+      fail-fast: true
+      discovery:
+        enabled: true
+        service-id: openwms-config
+#      username: ${owms.config.username:user}
+#      password: ${owms.config.password:sa}
 
 server:
   port: ${PORT:8082}
 
+eureka:
+  client:
+    serviceUrl:
+      # need to be overridden in the cloud environment props!
+      defaultZone: ${owms.eureka.url}/eureka
+  instance:
+    hostname: openwms-common-services.herokuapp.com
+    # need to be overridden in the cloud environment props!
+    secure-port-enabled: true
+    non-secure-port-enabled: false
+    statusPageUrl: https://${eureka.instance.hostName}/info
+    healthCheckUrl: https://${eureka.instance.hostName}/health
+    homePageUrl: https://${eureka.instance.hostName}/
+
+---
+spring:
+  profiles: DEV
+
+owms:
+  eureka:
+    url: http://user:sa@localhost:8761
+
+eureka:
+  instance:
+    hostname: localhost
+    secure-port-enabled: false
+    non-secure-port-enabled: true
+    non-secure-port: ${server.port}
+    statusPageUrl: http://${eureka.instance.hostName}/info
+    healthCheckUrl: http://${eureka.instance.hostName}/health
+    homePageUrl: http://${eureka.instance.hostName}/
+
+security:
+  user:
+    password: sa
