worked on connecting routing to common-service

--- a/org.openwms.common/org.openwms.common.comm/src/main/resources/bootstrap.yml
+++ b/org.openwms.common/org.openwms.common.comm/src/main/resources/bootstrap.yml
@@ -27,6 +27,8 @@ eureka:
     serviceUrl:
       # need to be overridden in the cloud environment props!
       defaultZone: ${owms.eureka.url}/eureka
+    healthcheck:
+      enabled: true
   instance:
     hostname: openwms-tcpip-driver.herokuapp.com
     # need to be overridden in the cloud environment props!
