Switched default profiles to development

--- a/org.openwms.common/org.openwms.common.comm/pom.xml
+++ b/org.openwms.common/org.openwms.common.comm/pom.xml
@@ -41,6 +41,11 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>org.openwms</groupId>
+            <artifactId>org.openwms.common.shared</artifactId>
+        </dependency>
+
         <!-- Spring Framework -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
