--- a/pom.xml
+++ b/pom.xml
@@ -568,7 +568,7 @@
         <plugin.checkstyle.version>2.11</plugin.checkstyle.version>
         <plugin.clean.version>2.5</plugin.clean.version>
         <plugin.cobertura.version>2.3</plugin.cobertura.version>
-        <plugin.compiler.version>3.1</plugin.compiler.version
+        <plugin.compiler.version>3.1</plugin.compiler.version>
         <plugin.dashboard.version>1.0.0-beta-1</plugin.dashboard.version>
         <plugin.deploy.version>2.8.1</plugin.deploy.version>
         <plugin.enforcer.version>1.3.1</plugin.enforcer.version>
